login page customized

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,29 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Login Page</title>
 </head>
-<body>
-    <h1>Login</h1>
-    <div class="d-flex justify-content-center align-items-center">
-        <form>
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+<body class="bg-slate-100">
+    <div class="flex flex-col justify-center lg-:px-8 min-h-full px-6 py-12">
+        <div class="max-w-sm mt-5 mx-auto w-full">
+            <form th:action="@{/login}" method="post" class="bg-white overflow-hidden p-10 rounded-xl shadow-lg space-y-6">
+                <div class="max-w-sm mx-auto">
+                    <img class="h-52 mx-auto w-52" th:src="@{/images/company.png}">
+                </div>
+                <h4 class="font-bold leading-9 mt-10 text-center text-gray-900 text-xl tracking-tight">Sign in to your account</h4>
+
+                <div class="mt-5">
+                    <label class="block font-medium leading-6 text-gray-900 text-sm" for="username">Username</label>
+                    <div>
+                        <input class="block border-0 focus:ring-2 focus:ring-blue-300 focus:ring-inset ms:text-sm placeholder:text-gray-400 px-3 py-1.5 ring-1 ring-gray-300 ring-inset rounded-md shado-sm sm:leading-6 text-gray-900 w-full" type="text" id="username" placeholder="Username">
+                    </div>
+                </div>
+                <div class="mt-2">
+                    <label class="block font-medium leading-6 text-gray-900 text-sm" for="password">Password</label>
+                    <div>
+                        <input class="block border-0 focus:ring-2 focus:ring-blue-600 focus:ring-inset ms:text-sm placeholder:text-gray-400 px-3 py-1.5 ring-1 ring-gray-300 ring-inset rounded-md shadow-sm sm:leading-6 text-gray-900 w-full" type="password" id="password" placeholder="Password">
+                    </div>
+                </div>
+                <div>
+                    <input class="bg-blue-300 flex focus-visible:outline focus-visible:outline-blue-300 focus-visible:outline-offset-2 font-semibold hover:bg-cyan-300 justify-center leading-6 px-3 py-1.5 ring-1 ring-inset rounded-md shadow-sm text-sm text-white w-full" type="submit" th:value="login">
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
