--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,21 +15,23 @@
                     <img class="h-52 mx-auto w-52" th:src="@{/images/company.png}">
                 </div>
                 <h4 class="font-bold leading-9 mt-10 text-center text-gray-900 text-xl tracking-tight">Sign in to your account</h4>
-
+                <div class="flex justify-center" th:if="${param.error}">
+                    <span class="text-red-600">Incorrect Username Or Password </span>
+                </div>
                 <div class="mt-5">
                     <label class="block font-medium leading-6 text-gray-900 text-sm" for="username">Username</label>
                     <div>
-                        <input class="block border-0 focus:ring-2 focus:ring-blue-300 focus:ring-inset ms:text-sm placeholder:text-gray-400 px-3 py-1.5 ring-1 ring-gray-300 ring-inset rounded-md shado-sm sm:leading-6 text-gray-900 w-full" type="text" id="username" placeholder="Username">
+                        <input class="block border-0 focus:ring-2 focus:ring-blue-300 focus:ring-inset ms:text-sm placeholder:text-gray-400 px-3 py-1.5 ring-1 ring-gray-300 ring-inset rounded-md shado-sm sm:leading-6 text-gray-900 w-full" type="text" id="username" name="username" placeholder="Username">
                     </div>
                 </div>
                 <div class="mt-2">
                     <label class="block font-medium leading-6 text-gray-900 text-sm" for="password">Password</label>
                     <div>
-                        <input class="block border-0 focus:ring-2 focus:ring-blue-600 focus:ring-inset ms:text-sm placeholder:text-gray-400 px-3 py-1.5 ring-1 ring-gray-300 ring-inset rounded-md shadow-sm sm:leading-6 text-gray-900 w-full" type="password" id="password" placeholder="Password">
+                        <input class="block border-0 focus:ring-2 focus:ring-blue-600 focus:ring-inset ms:text-sm placeholder:text-gray-400 px-3 py-1.5 ring-1 ring-gray-300 ring-inset rounded-md shadow-sm sm:leading-6 text-gray-900 w-full" type="password" id="password" name="password" placeholder="Password">
                     </div>
                 </div>
                 <div>
-                    <input class="bg-blue-300 flex focus-visible:outline focus-visible:outline-blue-300 focus-visible:outline-offset-2 font-semibold hover:bg-cyan-300 justify-center leading-6 px-3 py-1.5 ring-1 ring-inset rounded-md shadow-sm text-sm text-white w-full" type="submit" th:value="login">
+                    <input class="bg-blue-300 flex focus-visible:outline focus-visible:outline-blue-300 focus-visible:outline-offset-2 font-semibold hover:bg-cyan-300 justify-center leading-6 px-3 py-1.5 ring-1 ring-inset rounded-md shadow-sm text-sm text-white w-full" type="submit" value="Login">
                 </div>
             </form>
         </div>
