--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,6 +33,11 @@
                 <div>
                     <input class="bg-blue-300 flex focus-visible:outline focus-visible:outline-blue-300 focus-visible:outline-offset-2 font-semibold hover:bg-cyan-300 justify-center leading-6 px-3 py-1.5 ring-1 ring-inset rounded-md shadow-sm text-sm text-white w-full" type="submit" value="Login">
                 </div>
+                <div class="flex justify-content">
+                    <h5>Continue With:</h5>
+                    <a th:href="@{/oauth2/authorization/google}"><img th:src="@{/images/google-logo.png}" class="h-10 mx-auto w-14"></a>
+                    <a th:href="@{/oauth2/authorization/github}"><img th:src="@{/images/github-mark.png}" class="h-8 mx-auto w-8"></a>
+                </div>
             </form>
         </div>
     </div>
